--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "messenger-bot": "^2.4.0",
     "request": "^2.78.0"
   }
 }
