--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "messenger-bot": "^2.4.0",
+    "mongoose": "^4.11.5",
     "request": "^2.78.0"
   }
 }
